--- a/herb-config/rbs_collection.lock.yaml
+++ b/herb-config/rbs_collection.lock.yaml
@@ -9,6 +9,14 @@ gems:
     revision: 2300305bfd01c253f29216bb78c2e8e40184f92a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: addressable
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: d70d634c6e848dc5e93cea0163cc8206448be048
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: ast
   version: '2.4'
   source:
@@ -89,6 +97,10 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: herb-core
+  version: 0.1.0
+  source:
+    type: rubygems
 - name: i18n
   version: '1.10'
   source:
